--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
                 このため「何があるべきか」つまり美の内容は具体的対象によって定義できず、主観は自由であるため物理指標化は困難です。<br>
                 一方で物理的事象については、個々人がそれを恣意的に受容するかどうかとは別の問題として、例えば「線の関係に絶対性/普遍性があるか」を調べることで、美的要件の存在を解析可能です。<br>
                 本ツールでは、美的要件としての絶対性/普遍性の物理事象における一例として、延長、平行、同一間隔、比率への一致を解析します。
-                絵画、建築物、自動車、その他産業製品等、芸術家やデザイナーがどこに線を合わせたのかをご覧いただけましたら幸いです。<br><br>
+                絵画、建築物、自動車、その他産業製品等、芸術家やデザイナーがどこに線を合わせたのかをご覧いただけましたら幸いです。<br>
                 This tool analyzes why the positions, angles, and lengths of line segments in an image may be regarded as aesthetically meaningful.
-                Here, the essence of aesthetic (ethical) judgment is taken to be the very act of demanding some form of necessity or universality ("it must be x") from objects; this follows Kant’s Critique of Judgment.<br>
+                Here, the essence of aesthetic (ethical) judgment is taken to be the very act of demanding some form of necessity or universality ("it must be x") from objects; this follows Kant’s Critique of Judgment.
                 What is demanded, and to what object, is arbitrary—both “it” and “x” may include even the negation of necessity/universality.
-                Accordingly, the content of “what ought to be” cannot be defined by concrete objects, and subjective variability makes physical quantification difficult.<br>
+                Accordingly, the content of “what ought to be” cannot be defined by concrete objects, and subjective variability makes physical quantification difficult.
                 However, regarding physical configurations, and abstracting from whether individuals happen to accept them, one may examine whether relations among lines exhibit necessity/universality, which enables aesthetic requirements to be analyzed in physical terms.<br>
                 This tool operationalizes such requirements through extensions, parallels, equal intervals, and ratios.
                 It allows observation—across paintings, architecture, automobiles, and industrial products—of where artists or designers may have deliberately aligned lines.
