--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                 Here, the essence of aesthetic (ethical) judgment is taken to be the very act of demanding some form of necessity or universality ("it must be x") from objects; this follows Kant’s Critique of Judgment.
                 What is demanded, and to what object, is arbitrary—both “it” and “x” may include even the negation of necessity/universality.
                 Accordingly, the content of “what ought to be” cannot be defined by concrete objects, and subjective variability makes physical quantification difficult.
-                However, regarding physical configurations, and abstracting from whether individuals happen to accept them, one may examine whether relations among lines exhibit necessity/universality, which enables aesthetic requirements to be analyzed in physical terms.<br>
+                However, regarding physical configurations, and abstracting from whether individuals happen to accept them, one may examine whether relations among lines exhibit necessity/universality, which enables aesthetic requirements to be analyzed in physical terms.
                 This tool operationalizes such requirements through extensions, parallels, equal intervals, and ratios.
                 It allows observation—across paintings, architecture, automobiles, and industrial products—of where artists or designers may have deliberately aligned lines.
         </p>
