--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
   <!-- ExcelJS -->
   <script src="https://cdn.jsdelivr.net/npm/exceljs/dist/exceljs.min.js"></script>
   <!-- 解析ロジック -->
-  <script src="main.js"></script>
+  <script src="main.js?v=20260118"></script>
 
   <!-- orth 共通化のUIラッパ -->
   <script>
@@ -712,3 +712,4 @@
   </script>
 </body>
 </html>
+
