--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>線分解析ツール / Line Segment Analyzer Public ver.</title>
+  <title>Line Segment Analyzer Public ver.</title>
   <style>
     body {
       margin: 0;
@@ -253,7 +253,7 @@
       font-size: 12px;
       color: #111827;
     }
-
+ 
     #thresholdPanel label {
       display: block;
       margin-bottom: 4px;
@@ -261,6 +261,69 @@
       color: #374151;
       text-align: left;
     }
+
+    /* ファイル選択 UI（日英併記カスタム） */
+    #fileInputRow {
+      margin: 6px 0 10px;
+      font-size: 12px;
+      color: #374151;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      flex-wrap: wrap;
+    }
+
+    #fileInputLabel {
+      font-weight: 500;
+    }
+
+    /* ネイティブの file input は視覚的に隠す（アクセシビリティ対応） */
+    #imageInput {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border: 0;
+    }
+
+    #fileSelectButton {
+      display: inline-flex;
+      align-items: center;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid #d1d5db;
+      background: linear-gradient(135deg, #2563eb, #4f46e5);
+      color: #ffffff;
+      font-size: 12px;
+      font-weight: 500;
+      cursor: pointer;
+      box-shadow: 0 3px 8px rgba(37, 99, 235, 0.25);
+      transition: transform 0.05s ease-out,
+                  box-shadow 0.1s ease-out,
+                  opacity 0.1s ease-out;
+    }
+
+    #fileSelectButton:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 5px 12px rgba(37, 99, 235, 0.35);
+      opacity: 0.96;
+    }
+
+    #fileSelectButton:active {
+      transform: translateY(0);
+      box-shadow: 0 2px 5px rgba(37, 99, 235, 0.30);
+      opacity: 0.9;
+    }
+
+    #fileNameText {
+      font-size: 11px;
+      color: #6b7280;
+    }
+
 
     #thresholdPanel input[type="number"] {
       margin-left: 4px;
@@ -407,23 +470,19 @@
     <div id="introInner">
       <div id="introText">
         <!-- 題目：日英連続・同じ大きさ・太字 -->
-        <h1 id="introTitle">線分解析ツール&nbsp;Line Segment Analyzer</h1>
+        <h1 id="introTitle">線分解析ツール Line Segment Analyzer Public ver.</h1>
 
         <!-- 説明文：日英併記＋文毎に改行 -->
         <p>
-                本ツールは画像内の線分の位置、角度、長さが美的とされた理由を分析するための解析ツールです。
-                本ツールにおける美的(倫理的)判断の本質は、事物に対して絶対性/普遍性("it must be x")を要求することそのものとします。依拠はKantの『判断力批判』です。
-                何にどのような内容の絶対性/普遍性を要求するかは恣意的であり、"it"にも"x"にも「絶対的/普遍的でないこと」すら含め何でも入力可能です。
-                このため「何があるべきか」つまり美の内容は具体的対象によって定義できず、主観は自由であるため物理指標化は困難です。
-                一方で物理的事象については、個々人がそれを恣意的に受容するかどうかとは別の問題として、例えば「線の関係に絶対性/普遍性があるか」を調べることで、美的要件の存在を解析可能です。
-                本ツールでは、美的要件としての絶対性/普遍性の物理事象における一例として、延長、平行、同一間隔、比率への一致を解析します。
-                絵画、建築物、自動車、その他産業製品等、芸術家やデザイナーがどこに線を合わせたのかをご覧いただけましたら幸いです。<br>
+                One’s "what it is" of things is grounded only in linguistic cognition, whereas one’s "what it must be"—the normative or aesthetic demand on laws, rules, and principles—is grounded only in ethical and aesthetic sense.
+                Taken together, this bifurcation within all real beings presupposes the Creator who bears the authority to realize both "what it is" and "what it must be" for what is created.
+                In terms of the concept of “must,” it is the common element of absoluteness, universality, invariance, eternity, purposiveness, lawfulness, essentiality, criteria of good and evil, criteria of life and death, criteria of existence or nonexistence, and criteria of beauty.
+                <br>
                 This tool analyzes why the positions, angles, and lengths of line segments in an image may be regarded as aesthetically meaningful.
-                Here, the essence of aesthetic (ethical) judgment is taken to be the very act of demanding some form of necessity or universality ("it must be x") from objects; this follows Kant’s Critique of Judgment.
-                What is demanded, and to what object, is arbitrary—both “it” and “x” may include even the negation of necessity/universality.
-                Accordingly, the content of “what ought to be” cannot be defined by concrete objects, and subjective variability makes physical quantification difficult.
-                However, regarding physical configurations, and abstracting from whether individuals happen to accept them, one may examine whether relations among lines exhibit necessity/universality, which enables aesthetic requirements to be analyzed in physical terms.
-                This tool operationalizes such requirements through extensions, parallels, equal intervals, and ratios.
+                Regarding the essence of beauty, in the expression “it must be x,” both “it” and “x” can refer to anything, including even the negation of necessity or universality.
+                Accordingly, the content of “what must be,” that is, the essence of beauty, cannot be defined by concrete objects, and its subjective variability makes physical quantification difficult.
+                On the other hand, in physical configurations, it remains possible to examine whether there exists a “what it must be” in physical terms.
+                This tool operationalizes such “must” through extensions, parallels, equal intervals, and ratios.
                 It allows observation—across paintings, architecture, automobiles, and industrial products—of where artists or designers may have deliberately aligned lines.
         </p>
       </div>
@@ -480,17 +539,21 @@
         範囲フィルタ編集 / Range Filter Editing:<br>
         ・節点の追加 … 赤線上をクリック<br>
          &nbsp;&nbsp;Add vertex … Click on the red line<br>
-        ・節点の削除 … Ctrl + クリック（3点未満にはなりません）<br>
-        &nbsp;&nbsp;Delete vertex … Ctrl + Click (cannot reduce below 3 vertices)<br>
+        ・節点の削除 … Ctrl + クリック（最小3点）<br>
+        &nbsp;&nbsp;Delete vertex … Ctrl + Click (minimum 3)<br>
         ・ポリゴン全体の移動 … ポリゴン内側をドラッグ<br>
         &nbsp;&nbsp;Move whole polygon … Drag inside the polygon
       </div>
 
-      <div>
-        <label>
-          画像ファイル / Image file:
-          <input type="file" id="imageInput" accept="image/*">
+      <div id="fileInputRow">
+        <span id="fileInputLabel">画像ファイル / Image file:</span>
+        <label for="imageInput" id="fileSelectButton">
+          ファイルを選択 / Choose file
         </label>
+        <span id="fileNameText">
+          選択されていません / No file selected
+        </span>
+        <input type="file" id="imageInput" accept="image/*">
       </div>
 
       <div id="thresholdPanel">
@@ -560,7 +623,7 @@
   <!-- ExcelJS -->
   <script src="https://cdn.jsdelivr.net/npm/exceljs/dist/exceljs.min.js"></script>
   <!-- 解析ロジック -->
-  <script src="main.js?v=20260118"></script>
+  <script src="main.js"></script>
 
   <!-- orth 共通化のUIラッパ -->
   <script>
@@ -712,4 +775,3 @@
   </script>
 </body>
 </html>
-
